--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <script src="exercises/2-variables/2-4.js" type="module"></script>
+    <script src="exercises/4-iteration part 2/4-1-lines.js" type="module"></script>
     <link rel="stylesheet" type="text/css" href="styles/index.css" />
 </head>
 
